--- a/index.html
+++ b/index.html
@@ -1,27 +1,76 @@
 <!doctype html>
 <html>
     <head>
-        <title>Podcast Search</title>
+        <title>Search</title>
         <link rel="stylesheet" href="index.css">
         <style>
-            form {
+            .search-section {
+                margin: 2em;
+                padding: 2em;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+            }
+            .search-form {
                 margin: 2em 0;
+                display: flex;
+                gap: 1em;
+                align-items: center;
             }
-            input {
+            .search-input {
                 padding: 0.5em;
-                margin-right: 1em;
                 min-width: 300px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
             }
-            button {
+            .search-button {
                 padding: 0.5em 1em;
+                background-color: #007bff;
+                color: white;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
             }
-            #searchResults {
+            .search-button:hover {
+                background-color: #0056b3;
+            }
+            .results {
                 margin-top: 2em;
             }
         </style>
     </head>
     <body>
-        <h1>Podcast Search</h1>
+        <div id="podcastSection" class="search-section">
+            <h1>Podcast Search</h1>
+            <form class="search-form">
+                <input 
+                    type="text" 
+                    class="search-input" 
+                    id="podcastQuery" 
+                    placeholder="Search for podcasts..."
+                >
+                <button type="submit" class="search-button">
+                    Search Podcasts
+                </button>
+            </form>
+            <div id="podcastResults" class="results"></div>
+        </div>
+        
+        <div id="movieSection" class="search-section">
+            <h1>Movie Search</h1>
+            <form class="search-form">
+                <input 
+                    type="text" 
+                    class="search-input" 
+                    id="movieQuery" 
+                    placeholder="Search for movies..."
+                >
+                <button type="submit" class="search-button">
+                    Search Movies
+                </button>
+            </form>
+            <div id="movieResults" class="results"></div>
+        </div>
+        
         <script type="module" src="index.js"></script>
     </body>
 </html>
